kubernetes/frontend-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  labels:
    app: app
    type: frontend
spec:
  template:
    metadata:
      name: frontend-pod
      labels:
        app: app
        type: frontend
    spec:
      containers:
        - name: frontend-container
          image: lebkovy/frontend
          stdin: true
  replicas: 3
  selector:
    matchLabels:
      app: app
      type: frontend
