kubernetes/nginx-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-pod
  labels:
    component: web
    app: app

spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
