kubernetes/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
  labels:
    app: postgres
    type: db

spec:
  template:
    metadata:
      name: postgres-pod
      labels:
        app: postgres
        type: db
    spec:
      containers:
        - name: postgres-container
          image: postgres:alpine
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgresvolume
              subPath: postgres
      volumes:
        - name: postgresvolume
          persistentVolumeClaim:
            claimName: postgres-pvc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
      type: db
