kubernetes/redis-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: app
    type: cache

spec:
  template:
    metadata:
      name: redis-pod
      labels:
        app: app
        type: cache
    spec:
      containers:
        - name: redis-container
          image: redis:alpine
  replicas: 3
  selector:
    matchLabels:
      app: app
      type: cache
