kubernetes/frontendlb-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-clusterip
spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 80
  selector:
    component: frontend
    app: app
