kubernetes/frontendlb-node-port.yaml
apiVersion: v1
kind: Service

metadata:
  name: frontend-nodeport

spec:
  type: NodePort
  ports:
    - targetPort: 3000
      port: 3000
      nodePort: 30000

  selector:
    component: frontend
    app: app
