kubernetes/myfrontend-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: myfrontend-clusterip

spec:
  type: ClusterIP
  ports:
    - targetPort: 3000
      port: 80

  selector:
    component: frontend
    app: my-app
