kubernetes/postgres-clusterip.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip

spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000

  selector:
    type: db
