kubernetes/redis-clusterip.yaml
apiVersion: v1
kind: Service

metadata:
  name: redis-clusterip

spec:
  type: ClusterIP
  ports:
    - targetPort: 6379
      port: 6379

  selector:
    app: app
    type: cache
