kubernetes/ingress-service.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
spec:
  defaultBackend:
    service:
      name: frontend-clusterip
      port:
        number: 80
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  frontend-clusterip
                port:
                  number: 80
          - path: /api
            pathType: Prefix
            backend:
              service:
                name:  backendlb-clusterip
                port:
                  number: 5000
